--- a/_layouts/page_with_script.html
+++ b/_layouts/page_with_script.html
@@ -6,7 +6,7 @@ layout: default
 
   <h1>{{ page.title }}</h1>
 
-  <script src="diceroll.js"></script>
+  <script src="../_includes/diceroll.js"></script>
 
   <div class="entry">
     {{ content }}
