--- a/_layouts/page_with_script.html
+++ b/_layouts/page_with_script.html
@@ -60,6 +60,13 @@ layout: default
 
   <div class="entry">
     {{ content }}
+
+    <p id="demo"></p>
+    
+    <script>
+    document.getElementById("demo").innerHTML = 5 + 6;
+    </script>
+
     <form method="post" name="rollForm" id="diceroll_form">
         Dice Formula : <input type="text" name="droll" value="1d20"/>
         <input type="submit" value="Roll!" onclick="formula_roll()"/>
