--- a/_layouts/page_with_script.html
+++ b/_layouts/page_with_script.html
@@ -12,7 +12,7 @@ layout: default
     <p id="demo"></p>
     
     <script>
-    document.getElementById("demo").innerHTML = 5 + 6;
+    document.getElementById("demo").innerHTML = 777;
     </script>
 
 <script>
