--- a/_layouts/page_with_script.html
+++ b/_layouts/page_with_script.html
@@ -19,7 +19,7 @@ layout: default
 
     <script>
         function myfun() {
-          document.getElementById("demo").innerHTML = 777;
+          document.getElementById("demo").innerHTML = document.getElementById("diceroll_form").value;
         }
 
         function formula_roll() {
