--- a/_layouts/page_with_script.html
+++ b/_layouts/page_with_script.html
@@ -19,7 +19,7 @@ layout: default
 
     <script>
         function myfun() {
-          var str = oForm.elements["rollForm"].value
+          var str = document.getElementById("diceroll_form").placeholder;
           document.getElementById("demo").innerHTML = str;
         }
 
