--- a/_layouts/page_with_script.html
+++ b/_layouts/page_with_script.html
@@ -74,7 +74,7 @@ layout: default
           <label class="col-md-4 control-label" for="textinput">Dice Formula</label>  
           <div class="col-md-4">
           <input id="diceroll_form" name="rollForm" type="text" placeholder="1d20" class="form-control input-md">
-          <input class="button" type="submit">Roll!</button>
+          <input class="button" type="submit" name="Roll!"></button>
           </div>
         </div>
         
