--- a/_layouts/page_with_script.html
+++ b/_layouts/page_with_script.html
@@ -63,7 +63,7 @@ layout: default
       }
     </script> -->
 
-    <form class="form-horizontal" action="/submit.html">
+    <form class="form-horizontal" action="/diceroll">
         <fieldset>
         
         <!-- Form Name -->
