--- a/_layouts/page_with_script.html
+++ b/_layouts/page_with_script.html
@@ -66,15 +66,12 @@ layout: default
     <form class="form-horizontal" action="/diceroll">
         <fieldset>
         
-        <!-- Form Name -->
-        <legend>Form Name</legend>
-        
         <!-- Text input-->
         <div class="form-group">
-          <label class="col-md-4 control-label" for="textinput">Dice Formula</label>  
+          <label class="col-md-4 control-label" for="textinput"></label>  
           <div class="col-md-4">
           <input id="diceroll_form" name="rollForm" type="text" placeholder="1d20" class="form-control input-md">
-          <input class="button" type="submit" name="Roll!"></button>
+          <input class="button" type="submit" name="roll" value="Roll!"></button>
           </div>
         </div>
         
