--- a/_layouts/page_with_script.html
+++ b/_layouts/page_with_script.html
@@ -9,7 +9,7 @@ layout: default
   <div class="entry">
     {{ content }}
 
-    <p id="diceroll_res"></p>
+    <p id="diceroll_res">Result: </p>
 
 <!--     <script>
         function formula_roll() {
