--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,10 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/">Main</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/diceroll">Diceroll</a>
-            <a href="{{ site.baseurl }}/pictures">Pictures</a>
+            <a href="{{ site.baseurl }}/diceroll">Dice roller</a>
+            <a href="{{ site.baseurl }}/images">Images</a>
           </nav>
         </header>
       </div>
