--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/diceroll">Dice roller</a>
             <a href="{{ site.baseurl }}/images">Images</a>
+            <a href="{{ site.baseurl }}/audio">That one song</a>
           </nav>
         </header>
       </div>
