--- a/_layouts/page_w_audio.html
+++ b/_layouts/page_w_audio.html
@@ -16,7 +16,7 @@ layout: default
                        }
          </script>
       
-      <input type="button" value="PLAY"  onclick="play()">
+      <input type="button" class = "button" value="Play!"  onclick="play()">
       <audio id="audio" src="http://ol1.mp3party.net/online/2/2185.mp3" ></audio>
 
   </div>
