--- a/_layouts/page_w_script.html
+++ b/_layouts/page_w_script.html
@@ -8,7 +8,7 @@ layout: default
 
   <div class="entry">
     {{ content }}
-    <form class="form-horizontal" method="get">
+    <form class="form-horizontal" method="get" name="textinput">
             <fieldset>
 
                 <!-- Text input-->
