--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,24 +8,7 @@ layout: default
 
   <button onclick="topFunction()" class="btnToTop" id="myBtn" title="Go to top">Top</button>
 
-  <script>
-    // When the user scrolls down 20px from the top of the document, show the button
-    window.onscroll = function () { scrollFunction() };
-
-    function scrollFunction() {
-      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-        document.getElementById("myBtn").style.display = "block";
-      } else {
-        document.getElementById("myBtn").style.display = "none";
-      }
-    }
-
-    // When the user clicks on the button, scroll to the top of the document
-    function topFunction() {
-      document.body.scrollTop = 0; // For Chrome, Safari and Opera 
-      document.documentElement.scrollTop = 0; // For IE and Firefox
-    }
-  </script>
+  <script src="scroll.js"></script>
 
   <div class="entry">
     {{ content }}
