--- a/_layouts/page_w_audio.html
+++ b/_layouts/page_w_audio.html
@@ -9,12 +9,7 @@ layout: default
   <div class="entry">
     {{ content }}
 
-    <script>
-        function play(){
-             var audio = document.getElementById("audio");
-             audio.play();
-                       }
-         </script>
+    <script src="audio.js"></script>
       
       <input type="button" class = "button" value="Play!"  onclick="play()">
       <audio id="audio" src="http://ol1.mp3party.net/online/2/2185.mp3" ></audio>
