--- a/_layouts/page_w_script.html
+++ b/_layouts/page_w_script.html
@@ -26,6 +26,6 @@ layout: default
         <p id="diceroll_res"></p>
         <p id="diceroll_formula"></p>
 
-        <script src="diceroll.js"></script>
+        <script src="../_includes/diceroll.js"></script>
   </div>
 </article>
