--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@ layout: default
 
   <button onclick="topFunction()" class="btnToTop" id="myBtn" title="Go to top">Top</button>
 
-  <script src="../_includes/scroll.js"></script>
+  <script src="../assets/js/scroll.js"></script>
 
   <div class="entry">
     {{ content }}
