--- a/_layouts/page_w_script.html
+++ b/_layouts/page_w_script.html
@@ -8,6 +8,8 @@ layout: default
 
   <div class="entry">
     {{ content }}
+    <script src="../../assets/js/diceroll.js"></script>
+
     <form class="form-horizontal" method="get" name="textinput">
             <fieldset>
 
@@ -25,7 +27,5 @@ layout: default
 
         <p id="diceroll_res"></p>
         <p id="diceroll_formula"></p>
-
-        <script src="../assets/js/diceroll.js"></script>
   </div>
 </article>
