--- a/_layouts/page_w_audio.html
+++ b/_layouts/page_w_audio.html
@@ -10,7 +10,7 @@ layout: default
     {{ content }}
       
       <input type="button" class = "button" value="Play!"  onclick="play()">
-      <script src="../../assets/js/audio.js"></script>
+      <script src="/assets/js/audio.js"></script>
       <audio id="audio" src="http://ol1.mp3party.net/online/2/2185.mp3" ></audio>
 
   </div>
