--- a/_layouts/page_w_script.html
+++ b/_layouts/page_w_script.html
@@ -18,7 +18,6 @@ layout: default
                     <div class="col-md-4">
                         <input id="diceroll_form" name="rollForm" type="text" placeholder="1d20" class="form-control input-md">
                         <input class="button" name="roll" value="Roll!" onclick="my_echo()"></button>
-                        <script src="../../assets/js/diceroll.js"></script>
                     </div>
                 </div>
 
@@ -27,5 +26,7 @@ layout: default
 
         <p id="diceroll_res"></p>
         <p id="diceroll_formula"></p>
+
+        <script src="/assets/js/diceroll.js"></script>
   </div>
 </article>
